--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/btnENTRY"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -27,7 +28,7 @@
             android:text="ひとことを登録" />
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10" />
@@ -43,20 +44,20 @@
         android:layout_marginTop="39dp" >
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/btnMAINTE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="メンテ" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnENTRY"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="登録" />
     </LinearLayout>
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnCHECK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/linearLayout2"
