--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
             android:text="ひとことを登録" />
 
         <EditText
-            android:id="@+id/"
+            android:id="@+id/edtMsg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10" />
