--- a/res/layout/maintenance.xml
+++ b/res/layout/maintenance.xml
@@ -9,7 +9,7 @@
         android:orientation="vertical" >
 
         <ListView
-            android:id="@+id/listView1"
+            android:id="@+id/LyHITOKOTO"
             android:layout_width="wrap_content"
             android:layout_height="195dp" >
         </ListView>
@@ -24,13 +24,13 @@
         android:layout_marginLeft="41dp" >
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/btnMAINTE_BACK"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="戻る" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnDELETE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="削除" />
